Button Text Align Fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -117,6 +117,7 @@ nav ul li a:hover {
   color: #ffffff;
   border: 1px solid #ff0000;
   border-radius: 42px;
+  text-align: center;
 }
 
 .btn-primary:hover {
@@ -129,6 +130,7 @@ nav ul li a:hover {
   color: #ffffff;
   border: 1px solid;
   border-radius: 42px;
+  text-align: center;
 }
 
 .btn-secondary:hover {
